fix the overflow scrollable issue

--- a/src/views/router/router.module.scss
+++ b/src/views/router/router.module.scss
@@ -11,6 +11,7 @@
 
 .container {
 	flex-grow: 1;
+	overflow: hidden;
 
 	display: flex;
 	flex-direction: row;
